bad/incr_array_casted_null.example_compiler_output
ERROR
[1mbad/incr_array_casted_null.lat:4:15: [1;31merror: [0;1mexpression is not assignable[m
	((int[])null)++;
	             [1;32m^[m
[1mbad/incr_array_casted_null.lat:4:2: [1;34mnote: [0;1mexpression starts here[m
	((int[])null)++;
	[1;32m^[m
